# codechef-stats-api

./: README.md  main.py  pyproject.toml
core/: cache.py  config.py  middleware.py  rate_limit.py
models/: codechef.py  errors.py  heatmap.py  profile.py  rating.py  templates.py  unified.py
models/canonical/: __init__.py  badges.py  card.py  constants.py  contests.py  envelope.py  heatmap.py  profile.py  rating.py  stats.py  summary.py
routes/: badges.py  contests.py  docs.py  heatmap.py  legacy.py  profile.py  rating.py  stats.py  summary.py  topics.py  unified.py
services/: canonical_mapper.py  client.py  heatmap.py  profile.py  profile_parser.py  rating.py  topics.py  unified_mapper.py
tests/: test_badges_endpoint.py  test_canonical.py  test_heatmap.py  test_profile_info.py  test_topics.py  test_unified.py
