[project]
name = "codechef-api"
version = "0.1.0"
description = "FastAPI REST API for CodeChef profile data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "pydantic-settings>=2.6.1",
    "redis>=5.2.0",
    "uvicorn>=0.32.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "uvicorn>=0.46.0",
]
